Archive2/86/89604912b57714/output
main.cpp: In function 'int main()':
main.cpp:27:24: error: no matching function for call to 'Call(int, MyCallback<int>&)'
     Call(111, *callback);
                        ^
main.cpp:27:24: note: candidate is:
main.cpp:9:6: note: template<class T> void Call(T, Callback<T>&&)
 void Call(const T yyy, Callback<T>&& callback) {
      ^
main.cpp:9:6: note:   template argument deduction/substitution failed:
main.cpp:27:24: note:   'MyCallback<int>' is not derived from 'Callback<T>'
     Call(111, *callback);
                        ^
main.cpp:28:24: error: no matching function for call to 'Call(int, MyCallback<int>&)'
     Call(222, *callback);
                        ^
main.cpp:28:24: note: candidate is:
main.cpp:9:6: note: template<class T> void Call(T, Callback<T>&&)
 void Call(const T yyy, Callback<T>&& callback) {
      ^
main.cpp:9:6: note:   template argument deduction/substitution failed:
main.cpp:28:24: note:   'MyCallback<int>' is not derived from 'Callback<T>'
     Call(222, *callback);
                        ^
